---- Changes since 1.330 ----
Replaced the HTMLarea widget for composing email with Xinha.
---- Changes since 1.340 ----
Removed huge un-necessary plugins and styles for Xinha.
The list of users to ignore is no longer checked with an un-necessary regular expression.
---- Changes since 1.370 ----
When viewing a user's spam folder, buttons to globally whitelist spam or report as non-spam are displayed.
---- Changes since 1.380 ----
Spam folders are detected from the Virtualmin configuration, if installed.
Email cache and index files are now deleted when a user is removed using Webmin.
---- Changes since 1.390 ----
The number of un-read messages in user folders can be displayed using a new Module Config option (off by default, as there is no fast way to compute this).
---- Changes since 1.400 ----
Fixed a bug that broke searching by message body contents.
---- Changes since 1.410 ----
Re-organized the Module Config page to make the first section less crowded.
Added an option to skip messages flagged as deleted in a Maildir.
Detection of messages with attachments is now 100% accurate, rather than taking a guess based on the MIME type.
---- Changes since 1.430 ----
Added support for Exim, thanks to Emmanuel Florac.
Re-wrote the entire user interface to use the new Webmin UI library, and to bring it into sync with the Usermin module for reading mail.
---- Changes since 1.440 ----
HTML messages now have a converted plain-text attachment automatically added, for mail clients that only support text.
---- Changes since 1.450 ----
Added Module Config options to not include the X-Mailer and X-Originating-IP headers in sent mail.
---- Changes since 1.470 ----
When replying to a message, the original character set is used. Also, a bug that prevented the character set from being displayed when viewing a message is fixed.
Messages with alternate HTML and text bodies are now send with the multipart/alternative content type, which fixes the problem of Gmail showing the body twice.